# agent-skill-router

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  TODO.md  index.html  mkdocs.yml  opencode.jsonc  pyproject.toml  sitemap.xml
.claude/: mcp.json  settings.local.json
.github/prompts/: review-docs.prompt.md
.github/skills/pytest-coverage/: SKILL.md
.github/workflows/: copilot-setup-steps.yml  docs.yml  lint.yml  validate.yml
.maestro/: cue.yaml
.maestro/tasks/: DOC_LOG_Bob_2026-05-02.md  LOOP_00001_GAPS.md  LOOP_00001_PLAN.md
.maestro/tasks/development/documentation-coverage/: 1_ANALYZE.md  2_FIND_GAPS.md  3_EVALUATE.md  4_IMPLEMENT.md  5_PROGRESS.md
2026-05-02-Bob-Documenter/: Phase-01-Maestro-Task-Worker.md
agents/: index.html
cli/: index.html
concepts/: index.html
configuration/: index.html
docs/: agents.md  cli.md  concepts.md  configuration.md  index.md  skills.md  slash-commands.md
search/: search_index.json
skills/: index.html
slash-commands/: index.html
src/agent_skill_router/: __init__.py  _skills.py  _workspace_init.py  cli.py  server.py  settings.py
src/agent_skill_router/agents/: __init__.py  _base.py  claude.py  codex.py  cursor.py  gemini.py  github_copilot.py  goose.py  opencode.py
src/agent_skill_router/skills/skill-creator/: SKILL.md
tests/: conftest.py  test_cli.py  test_prompt.py  test_server.py  test_settings.py  test_setup.py  test_workspace_init.py
tests/fixtures/workspace/.agents/skills/code-review/: SKILL.md
tests/fixtures/workspace/.agents/skills/write-tests/: SKILL.md
tests/fixtures/workspace/.claude/: mcp.json
tests/fixtures/workspace/.claude/commands/: fix-bug.md
tests/fixtures/workspace/.codex/: config.toml
tests/fixtures/workspace/.codex/prompts/: generate-tests.md
tests/fixtures/workspace/.cursor/rules/: typescript.mdc
tests/fixtures/workspace/.gemini/: settings.json
tests/fixtures/workspace/.gemini/commands/: refactor.toml
tests/fixtures/workspace/.gemini/commands/git/: commit.toml
tests/fixtures/workspace/.github/prompts/: review-code.prompt.md
tests/fixtures/workspace/.goose/recipes/: standup.yaml
tests/fixtures/workspace/.opencode/: mcp.json
tests/fixtures/workspace/.opencode/commands/: create-pr.md
tests/integration/: conftest.py  test_discover.py  test_get_slash_commands.py  test_list_prompts.py  test_mcp_prompts.py  test_read_mcp_servers.py
tests/providers/: test_agents.py  test_claude.py  test_codex.py  test_copilot.py  test_cursor.py  test_gemini.py  test_goose.py  test_openclaw.py  test_opencode.py  test_vscode.py
tests/setup/: test_claude.py  test_codex.py  test_cursor.py  test_gemini.py  test_github_copilot.py  test_goose.py  test_opencode.py
