[project]
name = "agent-skill-router"
version = "0.1.0"
description = "MCP server that discovers and aggregates reusable agent skills across projects and AI providers (Claude, Cursor, Copilot, Gemini, Goose, OpenCode and more)"
readme = "README.md"
authors = [
    { name = "Mario Taddeucci", email = "mariotaddeucci@gmx.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = [
    "mcp",
    "model-context-protocol",
    "agent",
    "skills",
    "ai",
    "llm",
    "claude",
    "cursor",
    "copilot",
    "gemini",
    "goose",
    "opencode",
    "codex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.2.4,<4",
    "pydantic-settings>=2.14.0,<3",
    "typer>=0.15.0,<1",
]

[project.urls]
Homepage = "https://github.com/mariotaddeucci/agent-skill-router"
Repository = "https://github.com/mariotaddeucci/agent-skill-router"
Issues = "https://github.com/mariotaddeucci/agent-skill-router/issues"

[project.scripts]
agent-skill-router = "agent_skill_router.cli:app"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6",
    "mkdocs-material>=9",
    "prek>=0.3.11",
    "pyrefly>=0.63.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agent_skill_router"]
omit = ["*/skills/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear (common bugs and design issues)
    "C4",   # flake8-comprehensions (unnecessary comprehensions)
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "PTH",  # flake8-use-pathlib (enforce pathlib over os.path)
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking (move type-only imports into TYPE_CHECKING)
    "ANN",  # flake8-annotations (enforce type annotations)
    "ERA",  # eradicate (commented-out code)
    "TRY",  # tryceratops (exception handling best practices)
    "PIE",  # flake8-pie (misc cleanups)
    "PERF", # perflint (performance anti-patterns)
]
ignore = [
    "S101",   # assert — used in tests
    "TRY003", # long messages outside exception class — too strict
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S",    # bandit — security rules not relevant in tests
    "ANN",  # annotations — not required in tests
]

[tool.pyrefly]
project_includes = ["src", "tests"]
